update company endpoints
